aanmaak + finetuning extra pagina's

--- a/roeselare.html
+++ b/roeselare.html
@@ -45,21 +45,13 @@
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
-        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-map-pin"></i> <span>Gent</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-map-pin"></i> <span>Roeselare</span></a></li>
+        <li><a href="#hero" class="nav-link"><i class="bx bx-home"></i> <span>Home</span></a></li>
+        <li><a href="Gent.html" class="nav-link"><i class="bx bx-map-pin"></i> <span>Gent</span></a></li>
+        <li><a href="roeselare.html" class="nav-link active"><i class="bx bx-map-pin"></i> <span>Roeselare</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
   </header><!-- End Header -->
-
-  <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center">
-    <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Hendrik Rebry</h1>
-      <p>Homeopaat in  <span class="typed" data-typed-items="Gent, Roeselare"></span></p>
-    </div>
-  </section><!-- End Hero -->
 
   <main id="main">
 
@@ -68,7 +60,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Gent</h2>
+          <h2>Roeselare</h2>
         </div>
 
         <div class="row mt-1">
@@ -78,7 +70,8 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Adres</h4>
-                <p>Nieuwland 37, 9000 Gent</p>
+                <p>Bollenstraat 14 a <br>
+                  8800 Roeselare</p>
               </div>
 
               <div class="email">
