--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
-        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-map-pin"></i> <span>Gent</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-map-pin"></i> <span>Roeselare</span></a></li>
+        <li><a href="index.html" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+        <li><a href="gent.html" class="nav-link scrollto"><i class="bx bx-map-pin"></i> <span>Gent</span></a></li>
+        <li><a href="roeselare.html" class="nav-link scrollto"><i class="bx bx-map-pin"></i> <span>Roeselare</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -60,6 +60,11 @@
       <p>Homeopaat in  <span class="typed" data-typed-items="Gent, Roeselare"></span></p>
     </div>
   </section><!-- End Hero -->
+
+  <main id="main">
+
+
+  </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
