--- a/roeselare.html
+++ b/roeselare.html
@@ -45,7 +45,7 @@
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
-        <li><a href="#hero" class="nav-link"><i class="bx bx-home"></i> <span>Home</span></a></li>
+        <li><a href="index.html" class="nav-link"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="Gent.html" class="nav-link"><i class="bx bx-map-pin"></i> <span>Gent</span></a></li>
         <li><a href="roeselare.html" class="nav-link active"><i class="bx bx-map-pin"></i> <span>Roeselare</span></a></li>
       </ul>
