Clickable maken contactgegevens + Toevoegen H4 voor contactpagina

--- a/roeselare.html
+++ b/roeselare.html
@@ -61,6 +61,7 @@
 
         <div class="section-title">
           <h2>Roeselare</h2>
+          <h4>Enkel op afspraak</h4>
         </div>
 
         <div class="row mt-1">
@@ -70,20 +71,27 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Adres</h4>
-                <p>Bollenstraat 14 a <br>
-                  8800 Roeselare</p>
+                <p>
+                  <a href="https://bit.ly/3VlOMa3" style="color:#728394" target ="blank">
+                    Bollenstraat 14A<br>
+                  8800 Roeselare</a>
+                </p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@homeopathierebry.be</p>
+                <p>
+                  <a href="mailto:info@homeopathierebry.be" style="color:#728394">info@homeopathierebry.be</a>
+                </p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>
+                  <a href="tel:+32 477 51 85 21" style="color: #728394">+32 477 51 85 21</a>
+                </p>
               </div>
 
             </div>
@@ -129,13 +137,6 @@
     <div class="container">
       <h3>Brandon Johnson</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
-      <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
       </div>
