--- a/roeselare.html
+++ b/roeselare.html
@@ -102,7 +102,9 @@
 
             <div class="mapouter">
               <div class="gmap_canvas">
-                <iframe width="600" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=bollenstraat%2014A,%20roeselare&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><style>.mapouter{position:relative;text-align:right;height:300px;width:600px;}</style><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:600px;}</style></div></div>
+                <iframe width="600" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=bollenstraat%2014A,%20roeselare&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><style>.mapouter{position:relative;text-align:right;height:300px;width:600px;}</style><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:600px;}</style>
+              </div>
+            </div>
           </div>
 
         </div>
